Estudando manipulação de string

--- a/cap07/css/styles.css
+++ b/cap07/css/styles.css
@@ -2,3 +2,5 @@ img { float: left; height: 300px; width: 300px; }
 h1 { border-bottom-style: inset; }
 .entre-letras { letter-spacing: 0.5em; }
 .alinha-direita { text-align: right; }
+.oculta { display: none; }
+.exibe { display: inline; }
