--- a/cap07/css/styles.css
+++ b/cap07/css/styles.css
@@ -3,4 +3,4 @@ h1 { border-bottom-style: inset; }
 .entre-letras { letter-spacing: 0.5em; }
 .alinha-direita { text-align: right; }
 .oculta { display: none; }
-.exibe { display: inline; }
+.exibe { display: block; }
